test/visibility/only/onlyExceptSameUse.good
onlyExceptSameUse.chpl:13: error: syntax error near 'except'
